--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -5,7 +5,7 @@
     <meta name="author" content="{{ .Params.author.name }}">
     <base href="https://mark-z-r.github.io/">
     <link href="./main.css" rel="stylesheet">
-    <title>{{ .Page.title}} - {{.Site.Title}}</title>
+    <title>{{ .Page.Title}} - {{.Site.Title}}</title>
   </head>
   <body>
     <noscript>
