--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -5,11 +5,11 @@
     <meta name="author" content="{{ .Params.author.name }}">
     <base href="https://mark-z-r.github.io/">
     <link href="./main.css" rel="stylesheet">
-    <title>{{ .Page.Title}} - {{.Site.Title}}</title>
+    <title>{{ .Page.Title }} - {{ .Site.Title }}</title>
   </head>
   <body>
     <noscript>
-      <a href="{{ .Page.Permalink }}#main">Skip to content</a>
+      <a href="{{ .Permalink | strings.TrimRight `/` }}#main">Skip to content</a>
     </noscript>
     <main>
       {{ block "main" . }}
