--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,2 +1,8 @@
 {{ define "main" }}
+<section>  
+  <h1>About</h1>
+  <p>
+  This website was made for the purpose of experimentation,
+  </p>
+</section>
 {{ end }}
