--- a/layouts/_partials/navbar.html
+++ b/layouts/_partials/navbar.html
@@ -1,4 +1,4 @@
       <ul>
-	<li><a href="/index.html">Index</a></li>
-	<li><a href="/dev.html">Dev Page</a></li>
+	<li><a href="{{ site.Home.Permalink }}">Home</a></li>
+	<li><a href="{{site.BaseURL}}/dev.html">Dev Page</a></li>
       </ul>
