--- a/layouts/_partials/navbar.html
+++ b/layouts/_partials/navbar.html
@@ -1,4 +1,4 @@
-      <ul>
-	<li><a href="{{ site.Home.Permalink }}">Home</a></li>
-	<li><a href="{{site.BaseURL}}/dev.html">Dev Page</a></li>
-      </ul>
+<ul>
+  <li><a href="{{ .Site.Home.Permalink }}">Home</a></li>
+  <li><a href="{{ with .Site.GetPage `/dev.html` }}{{.Permalink}}{{end}}">Dev Page</a></li>
+</ul>
