--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="author" content="{{ .Params.author.name }}">
-    <base href="https://mark-z-r.github.io/">
+    <base href="{{ .Site.BaseURL }}">
     <link href="./main.css" rel="stylesheet">
     <title>{{ if ne .Page.Title .Site.Title }}{{ .Page.Title }} - {{ end }}{{ .Site.Title }}</title>
   </head>
