--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,15 @@
-p {
-  text-indent: 3em;
+:root {
+  color-scheme: light dark;
 }
+p {
+  text-indent: 4em;
+}
+code {
+  background-color: darkslategrey;
+  color: white;
+  border: .1em solid;
+  border-color: lightslategrey;
+  border-radius: .5em;
+  padding: .5em;
+}
+
