--- a/layouts/home.html
+++ b/layouts/home.html
@@ -1,8 +1,3 @@
 {{ define "main" }}
-<section>  
-  <h1>About</h1>
-  <p>
-  This website was made for the purpose of experimentation,
-  </p>
-</section>
+{{ .Content }}
 {{ end }}
